--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                               <a href="index.html" class="active">Home</a>
                          </li>
                          <li>
-                            <a href="about.html">About Us</a>
+                            <a href="aboutus.html">About Us</a>
                         </li>
                          <li>
                              <a href="services.html">Services</a>
